# LearnOpenGL

./: .gitmodules  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
openGLPractice/openGLPractice/: 3.3.shader.fs  3.3.shader.vs  4.1.texture.fs  draw_triangle.cpp  draw_triangle.h  glad.c  main.cpp  shader.cpp  shader.hpp  stb_image.cpp  transform.vs
openGLPractice/openGLPractice.xcodeproj/: project.pbxproj
openGLPractice/openGLPractice.xcodeproj/xcshareddata/xcschemes/: openGLPractice.xcscheme
src/: main.cpp
